DC ver 4